# src/controllers/account.controller.ts
@@ -6,7 +6,7 @@ const AccountController = {
   createData: async function (req: IRequest, res: Response): Promise<void> {
     try {
       const createdData = await accountService.createData(req)
-      res.status(201).json({ message: 'Create new elevator data successfully', createdData })
+      res.status(201).json({ message: 'Create data successfully', createdData })
     } catch (error: any) {
       res.status(500).json({ error: error.message })
     }
@@ -14,19 +14,23 @@ const AccountController = {
   getData: async function (req: IRequest, res: Response): Promise<void> {
     try {
       const _data = await accountService.getData(req)
-      res.status(200).json({ message: 'Get elevator data successfully', _data })
+      res.status(200).json({ message: 'Get data successfully', _data })
     } catch (error: any) {
       res.status(500).json({ error: error.message })
     }
   },
   getDataById: async function (req: IRequest, res: Response): Promise<void> {
     try {
-      const _id: string = req.user?._id ?? '';
-      const data = await accountService.getDataById(_id)
-      if (!data) {
-        res.status(404).json({ message: 'Card not found' })
+      const dataId: string = req.user?._id ?? ''
+      const user = await accountService.getDataById(dataId)
+      if (!user) {
+        res.status(404).json({ message: 'Data not found' })
       }
-      res.status(200).json({ message: 'Get elevator data by id successfully', data })
+      const { _id, fullname, email, avatarUrl, phone, nationCode, address, city, country, state } = user
+      res.status(200).json({
+        message: 'Get data successfully',
+        data: { _id, fullname, email, avatarUrl, phone, nationCode, address, city, country, state }
+      })
     } catch (error: any) {
       res.status(500).json({ error: error.message })
     }
@@ -35,9 +39,9 @@ const AccountController = {
     try {
       const updatedData = await accountService.updateDataById(req)
       if (!updatedData) {
-        res.status(404).json({ message: 'Card not found' })
+        res.status(404).json({ message: 'Data not found' })
       }
-      res.status(200).json({ message: 'Update elevator data successfully', updatedData })
+      res.status(200).json({ message: 'Update data successfully', updatedData })
     } catch (error: any) {
       res.status(500).json({ error: error.message })
     }
@@ -46,9 +50,9 @@ const AccountController = {
     try {
       const deletedData = await accountService.deleteDataById(req)
       if (!deletedData) {
-        res.status(404).json({ message: 'Citizen data not found' })
+        res.status(404).json({ message: 'Data not found' })
       }
-      res.status(200).json({ message: 'Delete citizen data successfully' })
+      res.status(200).json({ message: 'Delete data successfully' })
     } catch (error: any) {
       res.status(500).json({ error: error.message })
     }
