# src/routes/auth.route.ts
@@ -7,12 +7,8 @@ const router: Router = express.Router()
 router.post('/register', authController.registerController)
 router.post('/login', authController.loginController)
 router.post('/refresh-token', authMiddleware, authController.refreshTokenController)
-router.post(
-  '/change-password',
-  authMiddleware,
-  authorizeRoles('admin', 'super-admin', 'owner'),
-  authController.changePasswordController
-)
+router.post('/change-password', authMiddleware, authController.changePasswordController)
+router.post('/reset-password', authMiddleware, authController.changePasswordController)
 router.post('/logout', authMiddleware, authController.logoutController)
 
 export default router
